--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="KMUTNB MOOC"
-      content="เว็บไซต์ประชาสัมพันธ์ KMUTNB MOOC"
+      name="T-VET"
+      content="เว็บไซต์ประชาสัมพันธ์: T-VET"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
